Restrict max-width to avoid too much gap between text and video

--- a/media/css/firefox/whatsnew/whatsnew-138.scss
+++ b/media/css/firefox/whatsnew/whatsnew-138.scss
@@ -9,6 +9,11 @@
 @import 'includes/dark-mode';
 @import 'includes/mofo-donate-cta';
 
+
+.wnp-content-main .mzp-c-split-container {
+    max-width: $screen-xl; // keep the text narrow but don't let video get too big
+}
+
 .wnp-content-title {
     // keep small for initial split screen sizes
     @include text-title-sm;
